Added new API in for Term Model
Added new API for term model called getTermDates that retrieves the start and end date for a term, its name, and the total duration of the term alongside the number of days passed since term start date
