# app/Http/Controllers/SectionController.php
@@ -50,136 +50,7 @@ class SectionController extends Controller
         }
     }
 
-    /**
-     * Create a new section
-     * @OA\Post (
-     *     path="/api/section/add",
-     *     tags={"Section"},
-     *     @OA\RequestBody(
-     *         @OA\MediaType(
-     *             mediaType="application/json",
-     *             @OA\Schema(
-     *                 @OA\Property(
-     *                      type="object",
-     *                      @OA\Property(
-     *                          property="caps",
-     *                          type="boolean"
-     *                      ),
-     *                      @OA\Property(
-     *                          property="term_id",
-     *                          type="uuid"
-     *                      ),
-     *                      @OA\Property(
-     *                          property="course_id",
-     *                          type="uuid"
-     *                      ),
-     *                      @OA\Property(
-     *                          property="session_id",
-     *                          type="uuid"
-     *                      ),
-     *                      @OA\Property(
-     *                          property="sec_code",
-     *                          type="string"
-     *                      ),
-     *                      @OA\Property(
-     *                          property="cap",
-     *                          type="integer"
-     *                      ),
-     *                      @OA\Property(
-     *                          property="instructor_mode_id",
-     *                          type="uuid"
-     *                      ),
-     *                      @OA\Property(
-     *                          property="campus_id",
-     *                          type="uuid"
-     *                      ),
-     *                      @OA\Property(
-     *                          property="starting_date",
-     *                          type="datetime"
-     *                      ),
-     *                      @OA\Property(
-     *                          property="program_id",
-     *                          type="uuid"
-     *                      ),
-     *                      @OA\Property(
-     *                          property="cohorts",
-     *                          type="string"
-     *                      ),
-     *                      @OA\Property(
-     *                          property="status",
-     *                          type="string"
-     *                      ),
-     *                      @OA\Property(
-     *                          property="combined",
-     *                          type="boolean"
-     *                      ),
-     *                      @OA\Property(
-     *                          property="created_at",
-     *                          type="date"
-     *                      ),
-     *                      @OA\Property(
-     *                          property="updated_at",
-     *                          type="date"
-     *                      ),
-     *                      @OA\Property(
-     *                      property="created_by",
-     *                      type="string"
-     *                      ),
-     *                      @OA\Property(
-     *                          property="comment",
-     *                          type="string"
-     *                      ),
-     *                      @OA\Property(
-     *                          property="internal_note",
-     *                          type="string",
-     *                      ),
-     *                      @OA\Property(
-     *                          property="meeting_patterns",
-     *                          type="array",
-     *                          collectionFormat="multi",
-     *                          @OA\Items(type="object", format="object", example={meeting_patterns.0,meeting_patterns.1}),
-     *                      ),
-     *                 ),
-     *                 example={
-     *                      "caps": "1",
-     *                      "term_id": "2501",
-     *                      "course_id": "3001",
-     *                      "sec_code": "RVD",
-     *                      "cap": "123",
-     *                      "instructor_mode_id": "123",
-     *                      "campus_id": "123",
-     *                      "starting_date": "2024-01-10T22:18:54.927000Z",
-     *                      "program_id": 123,
-     *                      "cohorts": "exampleCohorts",
-     *                      "status": "exampleStatus",
-     *                      "combined":"1",
-     *                      "comment": "exampleComment",
-     *                      "created_at": "2024-01-10T22:18:54.927000Z",
-     *                      "updated_at": "2024-01-10T22:18:54.927000Z",
-     *                      "created_by": "exampleCreated_by",
-     *                      "ending_date": "2024-01-10T22:18:54.927000Z",
-     *                      "meeting_patterns": {meeting_patterns.0,meeting_patterns.1}
-     *                }
-     *             )
-     *         )
-     *      ),
-     *     security={{"bearer":{}}},
-     *      @OA\Response(
-     *          response=200,
-     *          description="Success",
-     *          @OA\JsonContent(
-     *              @OA\Property(property="meta", type="object"),
-     *              @OA\Property(property="data", type="object")
-     *          )
-     *      ),
-     *      @OA\Response(
-     *          response=422,
-     *          description="Validation error",
-     *              @OA\Property(property="data", type="object", example={}),
-     *          )
-     *      )
-     * )
-     */
+    
 
     public function addSection(SectionRequest $request): JsonResponse
     {
